--- a/src/Shipwreck.Minimatch/Shipwreck.Minimatch.csproj
+++ b/src/Shipwreck.Minimatch/Shipwreck.Minimatch.csproj
@@ -1,24 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFrameworks>netstandard1.0;net3.5;net4</TargetFrameworks>
-    <RootNamespace>Shipwreck</RootNamespace>
-    <Version>0.0.1</Version>
-    <Authors>shipwreck.jp</Authors>
-    <Company></Company>
-    <Description>C# minimatch implementation</Description>
-    <Copyright>(c) 2018 shipwreck.jp</Copyright>
-    <RepositoryUrl>https://github.com/pgrho/minimatch</RepositoryUrl>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageLicenseUrl>https://raw.githubusercontent.com/pgrho/minimatch/master/LICENSE</PackageLicenseUrl>
-  </PropertyGroup>
+	<PropertyGroup>
+		<LangVersion>12.0</LangVersion>
+		<TargetFrameworks>netstandard2.0;net48;net9.0</TargetFrameworks>
+		<RootNamespace>Shipwreck</RootNamespace>
+		<Version>0.0.3</Version>
+		<Authors>shipwreck.jp</Authors>
+		<Company></Company>
+		<Description>C# minimatch implementation</Description>
+		<Copyright>(c) 2018-2024 shipwreck.jp</Copyright>
+		<RepositoryUrl>https://github.com/pgrho/minimatch</RepositoryUrl>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DefineConstants>TRACE;MINIMATCH_PUBLIC</DefineConstants>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+		<DefineConstants>TRACE;MINIMATCH_PUBLIC</DefineConstants>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>TRACE;MINIMATCH_PUBLIC</DefineConstants>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<DefineConstants>TRACE;MINIMATCH_PUBLIC</DefineConstants>
+	</PropertyGroup>
 
 </Project>
